<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SyncOrgActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="empty_main">Welcome to SyncOrg</string>
    <string name="downloading">Downloading</string>
    <string name="view_as_document">View as document</string>
    <string name="title">Title</string>
    <string name="search_results_for">Search results for</string>
    <string name="no_result">No results</string>
    <string name="body">Click here to set the body text</string>
    <string name="tags">Tags</string>
    <string name="priority">Priority</string>
    <string name="todo_state">Todo state</string>
    <string name="scheduled">Scheduled</string>
    <string name="deadline">Deadline</string>
    <string name="no_state">No state</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_hint">Search</string>
    <string name="warning">WARNING!</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="set_title_here">Set title here</string>
    <string name="set_content_here">Set content here</string>
    <string name="insert_node">Insert node</string>
    <string name="insert_child_node">Insert child node</string>
    <string name="new_file">Create new file</string>
    <string name="parent_folder">Parent folder</string>
    <string name="specify_parent_folder">Please specify a parent folder</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="delete_node">Delete node</string>
    <string name="filename">Filename</string>
    <string name="details">Details</string>
    <string name="no_node">You have no node in this file:</string>
    <string name="no_todo">Lucky you !\n\nYour TODO list is empty !</string>
    <string name="conflict">Conflict</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="auth_type">Authentication type:</string>
    <string name="file_exists">This file exists already !</string>
    <string name="all_day">All day</string>
    <string name="share_files">Share files</string>
    <string name="folder">Folder: </string>
    <string name="unselectable_item">You cannot select this item</string>
    <string name="prompt_enter_password">Enter password</string>
    <string name="prompt_delete_file">Are you sure you want to delete this file?</string>
    <string name="prompt_delete_files">Are you sure you want to delete these # files?</string>
    <string name="prompt_node_delete">Are you sure you want to delete this node?</string>
    <string name="prompt_node_archive">Are you sure you want to archive this node?</string>
    <string name="prompt_node_edit">Are you sure you want to discard changes?</string>
    <string name="prompt_cert_changed">The WebDAV Certificate has changed, below are the details.  If you are okay with this click \'Accept\' otherwise click \'Deny\'.  If you accept the new certificate you will need to re-issue your Synchronize command</string>
    <string name="sync_not_configured">Sync not configured</string>
    <string name="sync_successful">Synchronization Successful</string>
    <string name="sync_error_occured">Error occurred during sync:</string>
    <string name="sync_synchronizing_changes">Synchronizing changes</string>
    <string name="sync_error_server_certificate">Error with server certificate:</string>
    <string name="sync_wait">Synchronizing, please wait…</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="sync_plugin">SyncOrg Synchronization</string>
    <string name="sync_plugin_info">This plugin allows you to trigger a SyncOrg Sync from Locale or Tasker.  If you are okay with this click \'Accept\' otherwise click \'Deny\'</string>
    <string name="sync_plugin_message">Synchronize</string>
    <string name="sync_git_file_added">Added file : </string>
    <string name="sync_git_merge_files">Conflict\nMerge files : </string>
    <string name="error_sqlio">There was a problem reading from the database, is your drive corrupted or is the SDCard mounted?</string>
    <string name="error_generic_database">Unhandled database error: %s</string>
    <string name="error_file_not_found">The file %s was not found</string>
    <string name="error_file_permissions">Permissions error on file %s</string>
    <string name="error_file_read">An error occurred while reading from file %s</string>
    <string name="error_file_write">An error occurred while writing to file %s</string>
    <string name="error_invalid_url">URL Contains Invalid Characters: %s</string>
    <string name="error_synchronizer_type_unknown">Unknown Synchronizer Method %s"</string>
    <string name="error_local_storage_method_unknown">Local storage method %s unknown</string>
    <string name="error_unsupported_encoding">Encountered unsupported encoding on file %s</string>
    <string name="error_url_fetch">An error occurred attempting to fetch the url %s</string>
    <string name="error_url_fetch_detail">An error occurred attempting to fetch the url %1$s: %2$s</string>
    <string name="error_url_put_detail">An error occurred attempting to upload the url %1$s: %2$s</string>
    <string name="error_opening_database">An error occurred attempting to create database.  Check your storage settings in the preferences menu, and make sure your storage card is available</string>
    <string name="error_url_put">An error occurred while attempting to put the URL %s</string>
    <string name="error_setting_no_calendar">NO CALENDAR</string>
    <string name="error_dropbox_fetch">There was an issue reading the dropbox path %1$s: %2$s</string>
    <string name="error_loading_node">Error loading node</string>
    <string name="error_bad_url">The url %s is not properly formatted</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_apg_not_found">APG not found</string>
    <string name="error_apg_version_not_supported">APG version not supported</string>
    <string name="error_transport_error">Git error. This usually happens when there was a problem with the repository. Is the path correct? Is git installed on the server?</string>
    <string name="menu_outline">Outline</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_todos">Todos</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_capture_simple">Simple Capture</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_addtag">Add Tag</string>
    <string name="menu_adddeadline">Add Deadline</string>
    <string name="menu_addscheduled">Add Scheduled</string>
    <string name="menu_timestamp">Add Timestamp</string>
    <string name="menu_view">View</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_file">Delete File</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_recover">Recover</string>
    <string name="menu_clockin">Clock in</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_archive_tosibling">Archive to sibling</string>
    <string name="up_one_level">Up one level</string>
    <string name="please_wait">Please wait…</string>
    <string name="signing_in">Signing in</string>
    <string name="pick_folder">Choose a folder to sync from:</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="path">Path</string>
    <string name="login">Log in</string>
    <string name="login_webdav">Check Login</string>
    <string name="login_ssh">Check SSH Login</string>
    <string name="i_want_to_sync_using">I want to sync using:</string>
    <string name="wizard_webdav">a WebDAV server</string>
    <string name="wizard_dropbox">a Dropbox account</string>
    <string name="wizard_ubuntuone">an UbuntuOne account</string>
    <string name="wizard_sdcard">my SD card</string>
    <string name="wizard_ssh">an SSH server</string>
    <string name="wizard_null">External/No sync (default)</string>
    <string name="log_in_to_dropbox">Log in to Dropbox</string>
    <string name="log_in_to_ubuntuone">Log in to Ubuntu One</string>
    <string name="log_in_to_webdav">Log in to your WebDAV server</string>
    <string name="log_in_to_ssh">Log in to your SSH server</string>
    <string name="title_no_sync">External or no synchronization</string>
    <string name="ssh_inform_choose_pub_file">SSH private key</string>
    <string name="ssh_choose_file_button">Select your *private* key file</string>
    <string name="null_sync_description">No synchronization mode</string>
    <string name="dropbox_login_info">This will redirect you to a login form.  After logging in it will return you to this screen to continue.</string>
    <string name="url">URL</string>
    <string name="wizard_dropbox_email_hint">user@host.com</string>
    <string name="wizard_ubuntu_email_hint">user@host.com</string>
    <string name="generate_dsa_keys">Generate DSA keys</string>
    <string name="pubkey_copied">Public key copied to clipboard !</string>
    <string name="pick_a_date">If you select a time, you must also select a date.</string>
    <string name="choose_folder">Org files directory:</string>
    <string name="preferences">Preferences</string>
    <string name="preference_actions">Actions</string>
    <string name="preference_edit">Edit</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_general">General</string>
    <string name="preference_advanced">Advanced</string>
    <string name="preference_autosync">Background sync</string>
    <string name="preference_autosync_summary">Automatically synchronize SyncOrg database in the background</string>
    <string name="preference_autosync_interval">Background sync interval</string>
    <string name="preference_autosync_interval_summary">How often the background sync service should run</string>
    <string name="preference_view_wrap_lines">Wrap lines</string>
    <string name="preference_view_wrap_lines_summary">Using custom line wrapping when viewing nodes</string>
    <string name="preference_default_todo_summary">Default todo when capturing files</string>
    <string name="preference_default_todo">Default todo</string>
    <string name="preference_clear_db_summary">Clean up the storage database</string>
    <string name="preference_clear_db">Clear database</string>
    <string name="preferences_widget_summary">Preferences for a Widget</string>
    <string name="preference_widget_title">Widget Preferences</string>
    <string name="preference_other">Other</string>
    <string name="preference_version">Version</string>
    <string name="preference_storage_mode">Storage Mode</string>
    <string name="preference_storage_summary">Where to store the org files</string>
    <string name="preference_storage">Storage</string>
    <string name="preference_recursion_level">Child nodes to display</string>
    <string name="preference_recursion_level_summary">How many levels of child nodes to display on view</string>
    <string name="title_scp_host">Host</string>
    <string name="title_scp_port">Port</string>
    <string name="title_scp_path">Path</string>
    <string name="summary_scp_path">Full path to index.org on the server</string>
    <string name="summary_web_url">Full URL path to your index.org file</string>
</resources>