<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Scp">
        <EditTextPreference
            android:name="scp_path"
            android:dialogMessage="@string/summary_scp_path"
            android:inputType="textUri"
            android:key="scpPath"
            android:title="@string/title_scp_path" />
        <EditTextPreference
            android:name="scp_user"
            android:key="scpUser"
            android:title="@string/username" />
        <EditTextPreference
            android:name="scp_password"
            android:inputType="textPassword"
            android:key="scpPass"
            android:password="true"
            android:title="@string/password" />
        <EditTextPreference
            android:name="scp_host"
            android:key="scpHost"
            android:title="@string/title_scp_host" />
        <EditTextPreference
            android:name="scp_port"
            android:defaultValue="22"
            android:inputType="number"
            android:key="scpPort"
            android:title="@string/title_scp_port" />
    </PreferenceCategory>
</PreferenceScreen>