<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/wizard_ssh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/log_in_to_ssh"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/wizard_ssh_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:singleLine="true"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/auth_type"
                android:textSize="20dp" />

            <Switch
                android:id="@+id/auth_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/wizard_ssh_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/wizard_ssh_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/wizard_ssh_pubkey_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/ssh_inform_choose_pub_file"
            android:textSize="20dp" />

        <Button
            android:id="@+id/wizard_ssh_choose_pub_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/generate_dsa_keys"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/wizard_ssh_pub_file_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/path"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/wizard_ssh_path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/host"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/wizard_ssh_host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/port"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/wizard_ssh_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:defaultValue="22"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="20dp" />

        <Button
            android:id="@+id/containing_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/parent_folder"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/parent_folder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/menu_help"
                android:textSize="20sp" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/ok"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
