<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0">

    <TableRow>

        <TextView
            android:id="@+id/dbCurrentToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/dbAuthLogin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/dbAuthPassword"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:password="true" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/dbAuthSubmit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/save" />
    </TableRow>
</TableLayout>
