<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:src="@drawable/logo" />

    <RadioGroup
        android:id="@+id/sync_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:text="@string/i_want_to_sync_using"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--<RadioButton-->
        <!--android:id="@+id/webdav"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="18sp"-->
        <!--android:text="@string/wizard_webdav"-->
        <!--android:checked="true"/>-->
        <!--<RadioButton-->
        <!--android:textSize="18sp"-->
        <!--android:id="@+id/dropbox"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/wizard_dropbox" />-->
        <!--<RadioButton-->
        <!--android:textSize="18sp"-->
        <!--android:id="@+id/ubuntuone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/wizard_ubuntuone" />-->
        <!--<RadioButton-->
        <!--android:textSize="18sp"-->
        <!--android:id="@+id/google_drive"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/wizard_google_drive" />-->
        <RadioButton
            android:id="@+id/scp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_ssh"
            android:textSize="18sp" />
        <!--<RadioButton-->
        <!--android:textSize="18sp"-->
        <!--android:id="@+id/sdcard"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/wizard_sdcard" />-->
        <RadioButton
            android:id="@+id/nullSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_null"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
</LinearLayout>
